# columnformers

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Column_Former_ImageNet100_Benchmark.ipynb  Column_Former_ImageNet100_Benchmark.py  GETTING_STARTED.md  LICENSE  README.md  RESULTS.md  benchmark_imagenet100.md  download_imagenet.sh  imagenet_class_info.json  process_imagenet_labels.py  pyproject.toml  requirements.txt  setup.cfg  test_labels.txt  train_labels.txt
IN1K_prep/: download_imagenet.sh
algonauts23/: features.py  utils.py
columnformers/: extract_features.py  feature_visualisation.py  losses.py  model_v1.py  pyproject.toml  registry.py  train.py  typing.py
columnformers/data/: __init__.py  datasets_factory.py  loader.py
columnformers/inspection/: __init__.py  features.py  figures.py  metrics.py  registry.py
columnformers/models/: __init__.py  classification.py  columnformer.py  columnformer_v1.py  geometry.py  layers.py  model_v1.py  quadformer.py  registry.py  topomoe.py  typing.py  vision_columnformer.py  vision_transformer.py
columnformers/src/: __init__.py  losses.py
columnformers/tasks/: __init__.py  classification.py  losses.py  typing.py
columnformers/tests/: test_losses.py
columnformers/utils/: __init__.py  misc.py  optim.py
data/imagenet100/: train_labels.txt
jobs/: README.md
jobs/attn_comp_01/: batch_array.sh
jobs/in100_01/: batch_array.sh
jobs/micro-in100_01/: batch_array.sh
jobs/moe_01/: base_config.yaml  batch_array.sh
notebooks/: imagenet-100_benchmark.ipynb  train_playground.ipynb
related_work/: Makefile  RELATED_WORK.md  RELATED_WORK_pandoc.md  columnformers.bib  ieee_compact.csl  pandoc.yaml
tests/: test_losses.py  test_model_v1.py  test_train.py  test_utils.py
topomoe/: extract_features.py  feature_visualisation.py  misc.py  pyproject.toml  train.py  visualise_features.py
topomoe/inspection/: __init__.py  compare_data_and_visualised_activations.py  extract.py  feature_visualiser.py  figures.py  image_augmentation.py  metrics.py  most_activating_images.py  registry.py
topomoe/models/: __init__.py  common.py  quadformer.py  quadmoe.py  softmoe.py  topomoe.py  wiring.py
topomoe/src/: train.py
topomoe/src/inspection/: features.py  figures.py  registry.py
topomoe/src/models/: __init__.py  common.py  quadmoe.py  topomoe.py  vit.py  wiring.py
topomoe/src/topomoe/: extract_features.py  train.py
topomoe/src/topomoe/models/: topomoe.py
topomoe/src/utils/: optim.py
topomoe/tests/: test_train.py
topomoe/tests/test_inspection/: test_figures.py
topomoe/tests/test_models/: test_quadformer.py  test_topomoe.py  test_wiring.py
topomoe/utils/: __init__.py  misc.py  saving_funcs.py
(+135 files in other folders)
